--- a/style.css
+++ b/style.css
@@ -13,10 +13,25 @@
   font-size: 18px;
   cursor: pointer;
 }
+.number-btn {
+  width: 30px;
+  height: 30px;
+  margin: 5px;
+  border: none;
+  border-radius: 50%;
+  background-color: #f0f0f0;
+  cursor: pointer;
+}
+
+.number-btn:hover {
+  background-color: #ccc;
+}
 
 .number:hover {
   background-color: #ccc;
 }
+
+
 
 .number-container {
   display: flex;
