--- a/style.css
+++ b/style.css
@@ -37,6 +37,10 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  text-align: center;
+  padding-left: 200px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .number-row:nth-child(3n) {
@@ -49,7 +53,9 @@
 
 .text-center{
   padding-top: 12px;
+  margin-left: auto;
   text-align: center;
+  margin-right: auto;
 }
 
 button{
